Correct top alignment for sidebar.

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -89,7 +89,7 @@ dt {
    position: fixed;
    right: 0;
    border-left: 1px solid #888;
-   top: 35px;
+   top: 43px;
    width: 200px;
    height: 100%;
    background-color: #eee;
